samples/_failures_safe/1761393177_bcbfe6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_647a6e69.c: In function ‘main’:
./samples/SAFE/__tmp_647a6e69.c:157:5: error: expected expression at end of input
  157 |     if (a <
      |     ^~
./samples/SAFE/__tmp_647a6e69.c:157:5: error: expected declaration or statement at end of input
